--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@prisma/client": "^5.21.1",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.7",
     "express": "^4.21.1",
     "firebase-admin": "^13.0.2",
     "joi": "^17.13.3",
