--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "type": "module",
   "dependencies": {
     "@prisma/client": "^6.4.1",
+    "api-wilayah-indonesia": "^1.0.8",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
