--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Server App for Jahit Baju",
   "main": "src/app.js",
   "scripts": {
-    "test": "jest -i"
+    "test": "jest -i",
+    "swagger": "node swagger.js"
   },
   "jest": {
     "transform": {
@@ -25,6 +26,8 @@
     "joi": "^17.13.3",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.16",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "^11.0.2",
     "winston": "^3.16.0"
   },
@@ -38,6 +41,7 @@
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "prisma": "^6.4.1",
-    "supertest": "^7.0.0"
+    "supertest": "^7.0.0",
+    "swagger-autogen": "^2.23.7"
   }
 }
