--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "api-wilayah-indonesia": "^1.0.8",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.1",
     "firebase-admin": "^13.0.2",
